# orange-db

./: Cargo.toml
db/: Cargo.toml
db/src/: error.rs  lib.rs  main.rs
db/src/file/: checksum.rs  compression.rs  file_builder.rs  file_reader.rs  mod.rs  types.rs
db/src/page/: base.rs  data.rs  iter.rs  mod.rs  sort.rs
db/src/store/: manifest.rs  meta.rs  mod.rs
db/src/store/page_store/: mod.rs
db/src/table/: mod.rs
db/src/tree/: mod.rs
db/src/utils/: atomic.rs  mod.rs
