
[package]
name = "db"
version.workspace = true
edition.workspace = true
description = "基于 bw-tree的 kv存储"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1",  features = ["full"] }
anyhow = "1.0.68"
thiserror="1.0.38"